@@ -1,7 +1,6 @@
 package me.chanjar.weixin.cp.bean.message;
 
 import me.chanjar.weixin.common.api.WxConsts;
-import me.chanjar.weixin.cp.bean.message.WxCpXmlMessage;
 import me.chanjar.weixin.cp.constant.WxCpConsts;
 import me.chanjar.weixin.cp.util.xml.XStreamTransformer;
 import org.testng.annotations.Test;
@@ -11,9 +10,15 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotNull;
 
+/**
+ * The type Wx cp xml message test.
+ */
 @Test
 public class WxCpXmlMessageTest {
 
+  /**
+   * Test from xml.
+   */
   public void testFromXml() {
 
     String xml = "<xml>"
@@ -63,10 +68,10 @@ public class WxCpXmlMessageTest {
     WxCpXmlMessage wxMessage = WxCpXmlMessage.fromXml(xml);
     assertEquals(wxMessage.getToUserName(), "toUser");
     assertEquals(wxMessage.getFromUserName(), "fromUser");
-    assertEquals(wxMessage.getCreateTime(), new Long(1348831860));
+    assertEquals(wxMessage.getCreateTime(), Long.valueOf(1348831860));
     assertEquals(wxMessage.getMsgType(), WxConsts.XmlMsgType.TEXT);
     assertEquals(wxMessage.getContent(), "this is a test");
-    assertEquals(wxMessage.getMsgId(), new Long(1234567890123456L));
+    assertEquals(wxMessage.getMsgId(), Long.valueOf(1234567890123456L));
     assertEquals(wxMessage.getPicUrl(), "this is a url");
     assertEquals(wxMessage.getMediaId(), "media_id");
     assertEquals(wxMessage.getFormat(), "Format");
@@ -86,7 +91,7 @@ public class WxCpXmlMessageTest {
     assertEquals(wxMessage.getPrecision().doubleValue(), 119.385040);
     assertEquals(wxMessage.getScanCodeInfo().getScanType(), "qrcode");
     assertEquals(wxMessage.getScanCodeInfo().getScanResult(), "1");
-    assertEquals(wxMessage.getSendPicsInfo().getCount(), new Long(1));
+    assertEquals(wxMessage.getSendPicsInfo().getCount(), Long.valueOf(1));
     assertEquals(wxMessage.getSendPicsInfo().getPicList().get(0).getPicMd5Sum(), "1b5f7c23b5bf75682a53e7b6d163e185");
     assertEquals(wxMessage.getSendLocationInfo().getLocationX(), "23");
     assertEquals(wxMessage.getSendLocationInfo().getLocationY(), "113");
@@ -95,6 +100,9 @@ public class WxCpXmlMessageTest {
     assertEquals(wxMessage.getSendLocationInfo().getPoiName(), "wo de poi");
   }
 
+  /**
+   * Test send pics info.
+   */
   public void testSendPicsInfo() {
     String xml = "<xml>" +
       "<ToUserName><![CDATA[wx45a0972125658be9]]></ToUserName>" +
@@ -113,17 +121,20 @@ public class WxCpXmlMessageTest {
     WxCpXmlMessage wxMessage = WxCpXmlMessage.fromXml(xml.replace("</PicList><PicList>", ""));
     assertEquals(wxMessage.getToUserName(), "wx45a0972125658be9");
     assertEquals(wxMessage.getFromUserName(), "xiaohe");
-    assertEquals(wxMessage.getCreateTime(), new Long(1502012364L));
+    assertEquals(wxMessage.getCreateTime(), Long.valueOf(1502012364L));
     assertEquals(wxMessage.getMsgType(), WxConsts.XmlMsgType.EVENT);
     assertEquals(wxMessage.getAgentId(), Integer.valueOf(1000004));
     assertEquals(wxMessage.getEvent(), "pic_weixin");
     assertEquals(wxMessage.getEventKey(), "faceSimilarity");
     assertNotNull(wxMessage.getSendPicsInfo());
-    assertEquals(wxMessage.getSendPicsInfo().getCount(), new Long(2L));
+    assertEquals(wxMessage.getSendPicsInfo().getCount(), Long.valueOf(2L));
     assertEquals(wxMessage.getSendPicsInfo().getPicList().get(0).getPicMd5Sum(), "aef52ae501537e552725c5d7f99c1741");
     assertEquals(wxMessage.getSendPicsInfo().getPicList().get(1).getPicMd5Sum(), "c4564632a4fab91378c39bea6aad6f9e");
   }
 
+  /**
+   * Test ext attr.
+   */
   public void testExtAttr() {
 
     String xml = "<xml>" +
@@ -135,16 +146,19 @@ public class WxCpXmlMessageTest {
       "    <ChangeType><![CDATA[update_user]]></ChangeType>" +
       "    <UserID><![CDATA[zhangsan]]></UserID>" +
       "    <ExtAttr>" +
-      "        <Item><Name><![CDATA[爱好]]></Name><Value><![CDATA[111]]></Value><Text><Value><![CDATA[111]]></Value></Text></Item>" +
-      "        <Item><Name><![CDATA[入职时间]]></Name><Value><![CDATA[11111]]></Value><Text><Value><![CDATA[11111]]></Value></Text></Item>" +
-      "        <Item><Name><![CDATA[城市]]></Name><Value><![CDATA[11111]]></Value><Text><Value><![CDATA[11111]]></Value></Text></Item>" +
+      "        <Item><Name><![CDATA[爱好]]></Name><Value><![CDATA[111]]></Value><Text><Value><![CDATA[111]]></Value" +
+      "></Text></Item>" +
+      "        <Item><Name><![CDATA[入职时间]]></Name><Value><![CDATA[11111]]></Value><Text><Value><![CDATA[11111" +
+      "]]></Value></Text></Item>" +
+      "        <Item><Name><![CDATA[城市]]></Name><Value><![CDATA[11111]]></Value><Text><Value><![CDATA[11111]]></Value" +
+      "></Text></Item>" +
       "    </ExtAttr>" +
       "    <Address><![CDATA[11111]]></Address>" +
       "</xml>";
     WxCpXmlMessage wxMessage = WxCpXmlMessage.fromXml(xml);
     assertEquals(wxMessage.getToUserName(), "w56c9fe3d50ad1ea2");
     assertEquals(wxMessage.getFromUserName(), "sys");
-    assertEquals(wxMessage.getCreateTime(), new Long(1557241961));
+    assertEquals(wxMessage.getCreateTime(), Long.valueOf(1557241961));
     assertEquals(wxMessage.getMsgType(), WxConsts.XmlMsgType.EVENT);
     assertEquals(wxMessage.getEvent(), "change_contact");
     assertEquals(wxMessage.getChangeType(), "update_user");
@@ -156,6 +170,9 @@ public class WxCpXmlMessageTest {
 
   }
 
+  /**
+   * Test task card event.
+   */
   public void testTaskCardEvent() {
     String xml = "<xml>" +
       "<ToUserName><![CDATA[toUser]]></ToUserName>" +
@@ -178,6 +195,9 @@ public class WxCpXmlMessageTest {
     assertEquals(wxMessage.getTaskId(), "taskid111");
   }
 
+  /**
+   * Test add external user event.
+   */
   public void testAddExternalUserEvent() {
     String xml = "<xml>" +
       "<ToUserName><![CDATA[toUser]]></ToUserName>" +
@@ -204,6 +224,9 @@ public class WxCpXmlMessageTest {
 
   }
 
+  /**
+   * Test del external user event.
+   */
   public void testDelExternalUserEvent() {
     String xml = "<xml>" +
       "<ToUserName><![CDATA[toUser]]></ToUserName>" +
@@ -226,6 +249,9 @@ public class WxCpXmlMessageTest {
     assertEquals(wxMessage.getExternalUserId(), "woAJ2GCAAAXtWyujaWJHDDGi0mACH71w");
   }
 
+  /**
+   * Test change contact.
+   */
   public void testChangeContact() {
     String xml = "<xml>\n" +
       "    <ToUserName><![CDATA[toUser]]></ToUserName>\n" +
@@ -244,7 +270,9 @@ public class WxCpXmlMessageTest {
       "    <Gender>1</Gender>\n" +
       "    <Email><![CDATA[zhangsan@gzdev.com]]></Email>\n" +
       "    <Status>1</Status>\n" +
-      "    <Avatar><![CDATA[http://wx.qlogo.cn/mmopen/ajNVdqHZLLA3WJ6DSZUfiakYe37PKnQhBIeOQBO4czqrnZDS79FH5Wm5m4X69TBicnHFlhiafvDwklOpZeXYQQ2icg/0]]></Avatar>\n" +
+      "    <Avatar><![CDATA[http://wx.qlogo" +
+      ".cn/mmopen/ajNVdqHZLLA3WJ6DSZUfiakYe37PKnQhBIeOQBO4czqrnZDS79FH5Wm5m4X69TBicnHFlhiafvDwklOpZeXYQQ2icg/0" +
+      "]]></Avatar>\n" +
       "    <Alias><![CDATA[zhangsan]]></Alias>\n" +
       "    <Telephone><![CDATA[020-3456788]]></Telephone>\n" +
       "    <Address><![CDATA[广州市]]></Address>\n" +
